# ETH-trading-MCP

./: .env  AGENT.md  Cargo.toml  README.md
config/: token_defaults.json
src/: config.rs  error.rs  lib.rs  main.rs  types.rs  wallet.rs
src/implementations/: balance.rs  erc20.rs  mod.rs  price.rs  swap.rs  uniswap.rs
src/implementations/price/: defaults.rs
src/layers/: mcp.rs  mod.rs  service.rs
tests/: price_chainlink_direct.rs  price_chainlink_via_usd.rs  price_uniswap_fallback.rs  swap_tokens_params_real.rs
