[package]
name = "walletmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
ethers = { version = "2" }
ethers-contract = { version = "2", features = ["abigen"] }
hex = "0.4"
once_cell = "1.19"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "io-util", "io-std"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
anyhow = "1"
